--- a/templates/success.html
+++ b/templates/success.html
@@ -1,10 +1,40 @@
 <html>
-  <head> </head>
+  <head>
+    <style>
+      div {
+        border-radius: 5px;
+        padding: 10% 10%;
+        text-align: center;
+      }
+      p {
+        width: 100%;
+        background-color: #4cadd0;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        font-size: 15px;
+      }
+      h {
+        font-size: 25px;
+      }
+      .box {
+        font-family: Helvetica;
+        background-color: #f2f2f2;
+        width: 60%;
+        height: 50%;
+      }
+    </style>
+  </head>
   <body>
-    <div>
-      <p>Success?</p>
-      <p>Your code is : {{ code }}</p>
-      <p>Your state is : {{ state }}</p>
+    <div class="box">
+      <div>
+        <h>Success</h>
+        <br /><br /><br /><br />
+        <p>Your code is : {{ code }}</p>
+        <p>Your state is : {{ state }}</p>
+      </div>
     </div>
   </body>
 </html>
