--- a/templates/success.html
+++ b/templates/success.html
@@ -6,6 +6,17 @@
         padding: 10% 10%;
         text-align: center;
       }
+      a {
+        width: 100%;
+        background-color: #4caf50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 15px;
+      }
       p {
         width: 100%;
         background-color: #4cadd0;
@@ -34,6 +45,10 @@
         <br /><br /><br /><br />
         <p>Your code is : {{ code }}</p>
         <p>Your state is : {{ state }}</p>
+        <br /><br />
+        <a href="/login">Get another code</a>
+        <br /><br /><br /><br />
+        <a href="/accessToken/{{ code }}">Get Access Token</a>
       </div>
     </div>
   </body>
